# humanmaximizer-lead-gen

./: .env.example  .gitignore  FINAL_IMPLEMENTATION.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-streamlit.txt  streamlit_app.py  video_script.html
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  main.py  requirements.txt
backend/agents/: __init__.py  graph.py  qualification_agent.py  research_agent.py  sales_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_leads_table.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  leads.py  outreach.py  rag_ingest.py  rag_query.py  search.py
backend/models/: __init__.py  crud.py  database.py  lead.py  state.py
backend/observability/: __init__.py  langsmith.py  metrics.py  middleware.py
backend/prompts/: __init__.py  cold_email.j2  linkedin_message.j2  qualification_reasoning.j2  research_summary.j2  self_critique.j2
backend/rag/: __init__.py  ingestor.py  retriever.py
backend/scripts/: ingest.py
backend/tests/: conftest.py  test_api.py  test_qualification.py  test_tools.py
backend/tests/fixtures/: demo_state.py
backend/tools/: __init__.py  contact_finder.py  scraper.py  self_critique_tool.py  serp_search.py
docs/: architecture.md  architecture_diagram.html  demo_video_script.md  fine_tuning_strategy.md  llm_strategy.md  prompt_examples.md
notebooks/: rag_evaluation.ipynb
scripts/: generate_architecture_pdf.py
