[tool.poetry]
name = "humanmaximizer-lead-gen"
version = "1.0.0"
description = "AI-powered B2B lead generation and research assistant for HumanMaximizer HRMS"
authors = ["HumanMaximizer <sales@humanmaximizer.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
